[package]
name = "advent2019"
version = "0.1.0"
authors = ["Joe Horne <joeh19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.7.24", features = ["macros"] }
permute = "0.1.0"
num-bigint = "0.3.0"
derive_more = "0.99.11"
num-traits = "0.2"
num-derive = "0.3"
